# directus-sdk-python

./: README.md  pyproject.toml  test.py
src/directus-sdk/: __init__.py
src/directus_sdk/: clients.py
